[*] немгого переделана работа с шаблонизатором в классе App

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -3,7 +3,7 @@
 {% block main %}
     <h1>Главная страница</h1>
     <p>Добро пожаловать на сайт проекта DeltaFrameework!</p>
-    <p>Публичная сайт работает с использованием шаблонизатора Twig и пока малофункциональна.</p>
+    <p>Публичная часть сайта работает с использованием шаблонизатора Twig и пока малофункциональна.</p>
     <h2>Контакты</h2>
     <p>
     <table class="table">
