--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -28,7 +28,7 @@
     </div>
 
     <div class="footer">
-        All right reserved
+        All right reserved, {{ currentYear }}
     </div>
 </div>
 </body>
