--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -28,7 +28,7 @@
     </div>
 
     <div class="footer">
-        All right reserved, {{ currentYear }}
+        <a href="https://github.com/rsgrinko/delta_framework" target="_blank">DeltaFramework</a> by Roman S Grinko, {{ currentYear }}
     </div>
 </div>
 </body>
