[+] базовый функционал авторизации и выхода из фронтовой части

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .main {
-    width: 1100px;
+    max-width: 1100px;
     margin: 0 auto;
     margin-top: 30px;
 }
@@ -37,7 +37,11 @@ body {
     background: #0085c7;
 }
 
-.main .header .mainMenu .menuItem:first-child:hover {
+.main .header .mainMenu .menuItem.active {
+    background: #0085c7;
+}
+
+.main .header .mainMenu .menuItem:first-child:hover, .main .header .mainMenu .menuItem.active:first-child {
     border-radius: 10px 0px 0px 0px;
 }
 
@@ -105,28 +109,32 @@ body {
     color: #00abff;
 }
 
-.table{
+.table {
     border: 1px solid #eee;
     table-layout: fixed;
     width: 100%;
     margin-bottom: 20px;
     border-collapse: collapse;
 }
+
 .table th {
     font-weight: bold;
     padding: 5px;
     background: #efefef;
     border: 1px solid #dddddd;
 }
-.table td{
+
+.table td {
     padding: 5px 10px;
     border: 1px solid #eee;
     text-align: left;
 }
-.table tbody tr:nth-child(odd){
+
+.table tbody tr:nth-child(odd) {
     background: #fff;
 }
-.table tbody tr:nth-child(even){
+
+.table tbody tr:nth-child(even) {
     background: #F7F7F7;
 }
 
@@ -140,9 +148,18 @@ body {
     margin-bottom: 10px;
 }
 
+.main .input {
+    width: 100%;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    border: 1px solid #00abff;
+    padding: 10px;
+}
+
 .main .w100 {
     width: 100%;
 }
+
 .main .button {
     background: #00abff;
     color: white;
@@ -167,6 +184,8 @@ body {
     background: #eee;
     border-radius: 3px;
     margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .main .messageBox .message.fromMe {
@@ -198,3 +217,31 @@ body {
     transform: rotate(180deg);
 }
 
+.main .messageBox .message .name {
+    font-weight: bold;
+    position: absolute;
+    top: 5px;
+}
+
+.main .messageBox .message .text {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.main .messageBox .message .date {
+    font-size: 0.7em;
+    align-self: end;
+}
+
+.main .header .mainMenu .userInfo {
+    margin-left: auto;
+    background: #006fa7;
+    padding: 10px;
+    color: white;
+    border-radius: 10px 10px 0px 10px;
+}
+
+.main .header .mainMenu a {
+    color: white;
+    text-decoration: none;
+}
