--- a/templates/dialog.twig
+++ b/templates/dialog.twig
@@ -34,7 +34,11 @@
 
         <div class="messageBox">
             {% for message in messages %}
-                <div class="message {% if message.user_from == userId %}fromMe{% else %}fromCompanion{% endif %}">{{ message.text }}</div>
+                <div class="message {% if message.user_from == userId %}fromMe{% else %}fromCompanion{% endif %}">
+                    <div class="name">{{ message.user_from_data.name }}</div>
+                    <div class="text">{{ message.text }}</div>
+                    <div class="date">{{ message.date }}</div>
+                </div>
             {% endfor %}
         </div>
 
