--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>{% block title %}Delta Framework{% endblock %}</title>
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="/assets/css/style.css?{{ salt }}" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
