--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -4,6 +4,8 @@
     <title>{% block title %}Delta Framework{% endblock %}</title>
     <link href="/assets/css/style.css?{{ salt }}" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="/assets/js/jquery-3.7.0.min.js?{{ salt }}"></script>
+    <script src="/assets/js/script.js?{{ salt }}"></script>
 </head>
 <body>
 
@@ -18,7 +20,7 @@
             <div class="menuItem {% if currentPage == 'index' %}active{% endif %}"><a href="/">Главная</a></div>
             <div class="menuItem"><a href="/admin/">Админка</a></div>
             {% if isAuthorized %}
-                <div class="menuItem {% if currentPage == 'dialogs' %}active{% endif %}"><a href="/dialogs">Диалоги</a></div>
+                <div class="menuItem {% if currentPage == 'dialogs' %}active{% endif %}"><a href="/dialogs">Диалоги{% if newMessages > 0 %} ({{ newMessages }}){% endif %}</a></div>
             {% endif %}
             <div class="menuItem {% if currentPage == 'users' %}active{% endif %}"><a href="/users">Список пользователей</a></div>
             <div class="menuItem {% if currentPage == 'info' %}active{% endif %}"><a href="/info">Информация о сборке</a></div>
