--- a/admin/styles/css/bootstrap-override.css
+++ b/admin/styles/css/bootstrap-override.css
@@ -726,7 +726,7 @@ h4, .h4 {
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
-   height: 15px;
+   /*height: 15px;*/
    margin-bottom: 15px;
 }
 
